# src/main/java/com/library/managementservice/controller/BookController.java
@@ -2,11 +2,14 @@ package com.library.managementservice.controller;
 
 import com.library.managementservice.api.dto.BookResponse;
 import com.library.managementservice.api.dto.CreateBookRequest;
+import com.library.managementservice.api.dto.UpdateBookRequest;
 import com.library.managementservice.service.BookService;
 
 import jakarta.validation.Valid;
 import org.springframework.http.HttpStatus;
 import org.springframework.web.bind.annotation.*;
+
+import java.util.List;
 
 
 @RestController
@@ -29,4 +32,22 @@ public class BookController {
     public BookResponse get(@PathVariable Long id) {
         return service.getById(id);
     }
+
+    @PutMapping("/{id}")
+    public BookResponse update(
+            @PathVariable Long id,
+            @RequestBody @Valid UpdateBookRequest req
+    ) {
+        return service.update(id, req);
+    }
+
+    @GetMapping
+    public List<BookResponse> search(
+            @RequestParam(required = false) String title,
+            @RequestParam(required = false) String author
+    ) {
+        return service.search(title, author);
+    }
+
+
 }
